[package]
name = "rs-logd"
version = "0.1.0"
authors = ["Gabriel Villela Noriega de Queiroz <gabrieljvnq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.102", features = ["derive"] }
rmp-serde = "^0.14.0"
serde_json = "^1.0"
datetime = "^0.4.7"
serde_repr = "^0.1.5"
